--- a/src/Components/Enquiry.css
+++ b/src/Components/Enquiry.css
@@ -1,23 +1,43 @@
 .enquiry {
-   display: flex; 
-}
+    display: flex; 
+ }
+ 
+ .enquiry button{
+     border-radius: 80px;
+     background-color: #b22d31;
+     border: 1px solid #b22d31;
+     font-size: 18px;
+     font-family: 'Poppins';
+     font-weight: 600;
+     padding: 10px 6%;
+     color: #fff;
+     height: 70px;
+     width: 200px;
+     margin-bottom: 20px; 
+     margin-right: 8px;
+     margin-left: 60px;
+     padding: 10px;
+ }
+ .enquiry button:focus{
+     outline: none !important;
+ }
 
-.enquiry button{
-    border-radius: 80px;
-    background-color: #b22d31;
-    border: 1px solid #b22d31;
-    font-size: 18px;
-    font-family: 'Poppins';
-    font-weight: 600;
-    padding: 10px 6%;
-    color: #fff;
-    height: 60px;
-    width: 300px;
-    margin-bottom: 20px; 
-    margin-right: 8px;
-    margin-left: 60px;
-    padding: 10px;
-}
-.enquiry button:focus{
-    outline: none !important;
-}
+ 
+ @media all and (max-width: 600px) {
+    .enquiry button{
+        border-radius: 80px;
+        background-color: #b22d31;
+        border: 1px solid #b22d31;
+        font-size: 18px;
+        font-family: 'Poppins';
+        font-weight: 600;
+        padding: 10px 6%;
+        color: #fff;
+        height: 60px;
+        width: 300px;
+        margin-bottom: 20px; 
+        margin-right: 8px;
+        margin-left: 10px;
+        padding: 10px;
+    }
+ }
