--- a/src/Components/RemoveFav.css
+++ b/src/Components/RemoveFav.css
@@ -1,7 +1,23 @@
 .remove {
-    height: 30px;
-    width: 200px;
-    background-color: #B22D31;
+    background-color: #B22D31 !important;
+    margin-left: 35% !important ;
+    margin-bottom: 5px !important ;
+    padding-bottom: 5px !important;
     color: white;
-    border: white;
+    height: 25px;
+    width: fit-content;
+    border-radius: none !important;
+  }
+  @media only screen and (max-width: 600px)
+{
+    .remove {
+        background-color: #B22D31 !important;
+        margin-left: 25px !important ;
+        margin-bottom: 5px !important ;
+        padding-bottom: 5px !important;
+        color: white;
+        height: 25px;
+        width: fit-content;
+        border-radius: none !important;
+      }  
 }
