--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -7,7 +7,9 @@ body {
 .my-navbar {
     box-shadow: 0px 10px 30px rgba(225,225,225, 100%);
     position: absolute;
-    width: 100% !important;
+    width: 100%;
+    left: 0;
+    z-index: 999;
     background: #fff4f5;
 }
 
@@ -19,7 +21,7 @@ body {
 
     padding: 4px 10px !important;
 
-    padding: 2px 10px !important;
+    
 
     margin: 0px 10px;
    height: 35px;
@@ -78,19 +80,27 @@ a.nav-link {
     border: 0;
     background: transparent;
     font-size: 18px;
+    
+ 
   }
+
+  se
   .searchbutton:active, .searchbutton:hover, .searchbutton:focus {
     color: #000;
     outline: none;
     box-shadow: none;
   }
   .searchbar {
-      background-color: white;
-      font-size: 15px;
-      color: black;
-      border-radius: 33px;
-      width : 250px;
-      padding: 5px;
+    background-color: #fff;
+    border-radius: 9px;
+    border: 1px solid #b22d3159;
+    color: #000;
+    font-size: 15px;
+    padding: 5px;
+    width: 250px;
+    position: absolute;
+    right: 7%;
+    top: 100%;
   }
 
   .searchbutton2 {
@@ -137,10 +147,6 @@ a.nav-link {
     text-decoration: none;
   }
   
-  a:hover {
-    background-color: lightgrey;
-  }
-  
   #clearBtn {
     cursor: pointer;
   }
@@ -148,22 +154,54 @@ a.nav-link {
   .list {
     display: block;
   }
+  .fa-close {
+    margin-right: 17px;
+}
 
   @media only screen and (max-width: 600px) {
 
-
-    .nav-link {
+  .nav-link {
         color: #000 !important;
     }
     .dropdown-toggle{
         padding-left: 26px;
     }
+    .fa-bars {
+        margin-left: 50px;
+        margin-right: 20px;
 
+    }
+    .searchbutton{
+        position: absolute;
+        right: 22%;
+        top: 20px;
+    }
+
+    .searchbar{
+        margin-top: 42px;
+        margin-left: 15px;
+        margin-right: 5px;
+    }
+    .fa-close {
+        margin-top: 5px;
+        margin-left: 150px;
+        margin-right: 10px;
+
+    }
     /* ul.navbar-nav,
     .fa-search {
         padding-left: 22px;
     } */
-
+    a.nav-link.dropdown-toggle:before {
+        content: "\f002";
+        float: left;
+        margin-top: -2px;
+        font-family: 'FontAwesome';
+        margin-right: 13px;
+    }
+    #navbarNav .fa-search{
+        display: none;
+    }
     a.nav-link:hover {
         background: #f9f9f9;
         border: 1px solid #f9f9f9;
@@ -197,6 +235,11 @@ a.nav-link {
     .nav-item ul li a:hover{
         background: transparent !important;
     border: 1px solid transparent !important;
+    }
+    .searchform {
+        position: absolute;
+        right: 19%;
+        top: 0;
     }
 
     /* nav .fa-search {
@@ -278,7 +321,7 @@ a.nav-link {
     .signup {
         padding: 7px 10px !important;
         margin-left: -11px !important;
-        width: fit-content;
+
     }
     .signupli{
         margin-top: 13px;
@@ -339,7 +382,6 @@ a.nav-link {
     .signup {
         padding: 7px 10px !important;
         margin-left: -33px !important;
-        width: fit-content;
     }
 
     nav ul {
@@ -386,7 +428,6 @@ a.nav-link {
         right: 60px;
     }
     .signup {
-        width: fit-content;
         padding: 7px 10px !important;
         margin-left: -10px;
     }
@@ -402,7 +443,6 @@ a.nav-link {
     .userli ul{
     padding: 0px 20px 0px 20px;
     margin: 16px 10px 10px -9px;
-    width: fit-content;
     border-radius: 40px;
     }
     .userli ul:hover{
