--- a/src/Extra-files/Products.css
+++ b/src/Extra-files/Products.css
@@ -75,11 +75,11 @@
       }
   .figureProd {
             height: 158px;
-            padding: 28px 0px 0px 0px;
             background: #FFFFFF;
             box-shadow: 0px 4px 10px rgb(0 0 0 / 7%);
+            margin:0;
+            padding: 0;
             border-radius: 24px;
-            width: 100px !important;
             text-align: center;
         }
         
