--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -1,9 +1,13 @@
 
 .login {
-  position: absolute;
     background: #FFFFFF;
     border-radius: 33px;
   }
+  .login .loginform {
+    position: absolute;
+    right: 19%;
+    top: 0;
+}
   
   .login  p {
     font-size: 14px;
@@ -18,6 +22,14 @@
     padding: 4% 0% 0% 4%;
     text-align: left;
    
+  }
+  .login .phone {
+  margin-left: 10%;
+    margin-top: 90px;
+  }
+  .login .pass {
+    margin-top: 5px !important;
+    margin-left: 10%;
   }
   
   .login input {
@@ -39,7 +51,7 @@
   }
   
   .login  button {
-  margin-left: 50px;
+  margin-left: 100px;
   margin-bottom: 20px;
   margin-top: 20px;
   cursor: pointer;
@@ -79,22 +91,56 @@
   
   @media (max-width : 768px) {
     .login{
-        left: 5px;
+        top: 100px;
+        
+
     }
-    .login .h2{
-      margin-left: 10px;
+    .login h2{
+      padding: 4% 45% 0% 5%;
     }
   
     .login input {
-        margin-left: 2%;
+      border: 1px solid #f7f7f7;
+      background: #f7f7f7;
+      border-radius: 38px;
+      color: #191919;
+      font-size: 14px;
+      text-align: left;
+      margin: 80px 50px 5px 0px;
+      padding: 3px 5% ;
+      width: 250px;
+      align-items: center;
     }
   
+    .login .phone {
+      margin-left: 25%;
+    }
+    .login .pass {
+      margin-top: 10px !important;
+      margin-left: 25%;
+    }
     .login button {
-        margin-left: 2px;
+      margin-left: 100px;
+      margin-bottom: 5px;
+      margin-top: 20px;
+      cursor: pointer;
+      height: 25px;
+      width: 180px;
+      border: #B22D31;
+      background: #B22D31;
+      border-radius: 39px;
+      font-family: 'Inter';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 19px;
+      color: #FFFFFF;
     }
   
     .login h3 {
-        margin-left: 20px;
+        margin-left: 85px;
+        padding-left: 10px;
+        margin-top: 10px;
     }
   }
   
