--- a/src/Pages/SignUp.css
+++ b/src/Pages/SignUp.css
@@ -82,24 +82,49 @@ color: #FFFFFF;;
   }
   
   
-  @media (max-width : 768px) {
-    signup{
+  @media only screen and (max-width: 600px) {
+    /* .sign_up{
         left: 5px;
-    }
-    .sign_up  .h2{
-      margin-left: 10px;
+    } */
+    .sign_up h2{
+      margin-left: 5px;
     }
   
     .sign_up  input {
         margin-left: 2%;
     }
   
-    .sign_up button {
-        margin-left: 2px;
-    }
-  
+    .sign_up .defaultButton {
+      margin-left: 15%;
+    margin-bottom: 10px;
+    margin-top: 15px;
+    cursor: pointer;
+    height: 30px;
+    width: 150px;
+    border: #B22D31;
+    background: #B22D31;
+    border-radius: 20px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 19px;
+    color: #FFFFFF;;
+      }
+    .sign_up input {
+      border: 1px solid #f7f7f7;
+      background: #f7f7f7;
+      border-radius: 20px;
+      color: #191919;
+      font-size: 14px;
+      text-align: left;
+      width: 250px;
+      margin: 10px 5px 0px 5px;
+      padding: 3% 8% ;
+      }
     .sign_up h3 {
-        margin-left: 20px;
+      margin-left: 0;
+      padding-left: 18%;
     }
   }
   
