--- a/src/Pages/UpdateProfile.css
+++ b/src/Pages/UpdateProfile.css
@@ -87,19 +87,31 @@
   
   
   @media (max-width : 768px) {
-    signup{
-        left: 5px;
+    .update{
+      position: absolute;
+      width: 300px;
+      height: 348px;
+      left: 15px;
+      top: 100px;
+      
+      background: #FFFFFF;
+      border-radius: 33px;
     }
-    .update  .h2{
-      margin-left: 10px;
+    .update  h2{
+      margin-bottom: 20px;
+      text-align: center;
     }
   
     .update  input {
-        margin-left: 2%;
+        height: 25px;
+        width: 250px;
+        margin-left: 40px;
     }
   
     .update button {
-        margin-left: 2px;
+        height: 25px;
+        width: 150px;
+        margin-left: 100px;
     }
   
     .update h3 {
