--- a/src/Pages/ViewProfile.css
+++ b/src/Pages/ViewProfile.css
@@ -83,18 +83,23 @@
   }
   
   
-  @media (max-width : 768px) {
+  @media (max-width : 600px) {
     .profile{
         left: 5px;
+        width: 300px;
+        height: 348px;
     }
-    .profile .h2{
-      margin-left: 10px;
+    .profile h2{
+     margin-left: 75px;
     }
   
     .profile input {
-        margin-left: 2%;
+        margin-left: 10%;
     }
   
+    .profile p {
+      margin-left: 7%;
+    }
     .profile button {
         margin-left: 2px;
     }
