--- a/src/Pages/CategoryList.css
+++ b/src/Pages/CategoryList.css
@@ -25,13 +25,13 @@
 }
 
 .category_section figure {
-  background: #FFFFFF;
-  box-shadow: 0px 4px 19px rgb(0 0 0 / 7%);
+  background: #fff;
   border-radius: 24px;
-  height: 210px;
-  padding: 30px 0px 0px 0px;
-  width: 100%;
+  box-shadow: 0 4px 19px rgb(0 0 0 / 7%);
+  height: 184px;
   text-align: center;
+  width: 100%;
+  padding: 15px 20px 15px 20px;
 }
 
 .circle{
@@ -103,10 +103,12 @@ a:hover {
 }
 
 .category_section figure img {
-  height: 155px;
-  z-index: 9;
-  position: relative;
-  width: 100%;
+  height: 152px;
+    position: relative;
+    width: 100%;
+    z-index: 9;
+    border: 1px solid transparent;
+    border-radius: 50%;
 }
 
 .content_section {
