--- a/src/Pages/SingleProduct.css
+++ b/src/Pages/SingleProduct.css
@@ -96,6 +96,21 @@
 h4{
   text-transform: uppercase;
 }
+
+.newclass .product-thumbs .swiper-slide img {
+  border:2px solid transparent;
+  object-fit: cover;
+  cursor: pointer;
+}
+.newclass  .product-thumbs .swiper-slide-active img {
+  border-color: #bc4f38;
+}
+.newclass .product-slider .swiper-button-next:after,
+.newclass .product-slider .swiper-button-prev:after {
+    font-size: 20px;
+    color: #000;
+    font-weight: bold;
+}
 .slider_txt{
   padding: 0% 6% 4% 2%;
   font-size: 15px;
@@ -185,13 +200,28 @@ h4{
       padding: 0 10px;
       right: 0;
   }
-  .product #carousel-thumbs .img-fluid {
+ .product #carousel-thumbs .img-fluid {
       height: 67px;
       background: #dee3e7bf;
       border: 1px solid #dee3e7bf !important;
       border-radius: 20px;
       width: fit-content;
       /* width: 100% !important; */
+  }
+
+ .newclass .product-thumbs .swiper-slide img {
+    border:2px solid transparent;
+    object-fit: cover;
+    cursor: pointer;
+  }
+.newclass  .product-thumbs .swiper-slide-active img {
+    border-color: #bc4f38;
+  }
+ .newclass .product-slider .swiper-button-next:after,
+ .newclass .product-slider .swiper-button-prev:after {
+      font-size: 20px;
+      color: #000;
+      font-weight: bold;
   }
   
   @media (min-width: 600px) and (max-width: 667px) {
