--- a/src/Components/Join.css
+++ b/src/Components/Join.css
@@ -9,15 +9,16 @@
     
 }
 
-.content h4 {
+.joinh4 {
     color: #fff;
     font-weight: 600;
     font-size: 26px;
     text-align: center;
+    margin: 1% 20px 30px;
     font-family: 'Poppins';
 }
 
-.content p {
+ .content p {
     font-weight: 400;
     font-size: 16px;
     color: #fff;
