--- a/src/Pages/AboutUs.module.css
+++ b/src/Pages/AboutUs.module.css
@@ -25,3 +25,23 @@
     font-family: 'Poppins';
 }
 
+@media all and (max-width: 600px){
+
+    .aboutus h2{
+        margin-left: 0px;
+    }
+    .aboutus h3{
+        text-align: left;
+    margin-left: 0px;
+    margin-top: 30px;
+    padding: 5px 20px;
+    }
+
+}
+
+@media all and (min-width: 768px) and (max-width: 1024){
+    form.searchform {
+        position: absolute;
+        right: 12%;
+    }
+}
