--- a/src/Pages/PrivacyPolicy.module.css
+++ b/src/Pages/PrivacyPolicy.module.css
@@ -25,3 +25,21 @@
     font-family: 'Poppins';
 }
 
+
+@media all and (max-width: 600px){
+
+    .privacypolicy h2{
+        margin-left: 0px;
+        font-size: 28px;
+    }
+
+    .privacypolicy h3{
+        text-align: justify;
+    margin-left: 0px;
+    margin-top: 30px;
+    padding: 5px 20px;
+    }
+
+
+}
+
