--- a/src/Pages/SingleProduct.css
+++ b/src/Pages/SingleProduct.css
@@ -1,3 +1,114 @@
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  height: 94%;
+ 
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  
+  object-fit: cover;
+  border: 1px solid transparent;
+    border-radius: 20px;
+}
+.swiper_img img{
+  width: 200px;
+  height: 213px;
+}
+.option_img img{
+  width: 100%;
+  height: 100%;
+}
+.pro_detail{
+  /* height: 300px; */
+  overflow-x: hidden;
+}
+
+.swiper {
+  width: 100%;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.slider_row{
+  padding-top: 13%;
+  padding-bottom: 0%;
+}
+.swiper-button-next:after, .swiper-button-prev:after{
+  font-size: 24px !important;
+}
+
+.swiper-slide {
+  background-size: cover;
+  background-position: center;
+  
+}
+
+.mySwiper2 {
+  height: 400px;
+  width: 100%;
+}
+
+.mySwiper {
+  height: 16%;
+  box-sizing: border-box;
+  padding: 10px 0;
+  margin-top: 3%;
+}
+
+.mySwiper .swiper-slide {
+  width: 25%;
+  height: 100%;
+ 
+}
+
+.mySwiper .swiper-slide-thumb-active {
+  opacity: 1;
+}
+
+.mySwiper img {
+  width: 70%;
+  margin: 0 auto;
+}
+
+/* .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 60%;
+  object-fit: contain;
+} */
+
+.swiper-wrapper .swiper_img{
+background-image: url(../Pages/images/blackbanner.png);
+background-repeat: no-repeat;
+background-size: 100% 100%;
+border: 1px solid transparent;
+border-radius: 50px;
+}
+
+
+
 .singleProduct {
   display: block;
 }
@@ -8,6 +119,9 @@
 
 .details_section{
   overflow: hidden;
+}
+.buton_lst{
+  padding: 0px;
 }
 .position_banner{
   background-image: url(../Pages/images/blackbanner.png);
@@ -97,6 +211,12 @@ h4{
   text-transform: uppercase;
 }
 
+.buton_lst li{
+  display: inline-block;
+  padding-left: 1%;
+}
+
+
 .newclass .product-thumbs .swiper-slide img {
   border:2px solid transparent;
   object-fit: cover;
@@ -159,11 +279,32 @@ h4{
       text-align: justify;
       margin-top: 0px;
   }
+  
   .product .carousel-item img {
       object-fit: contain;
       margin: 0 auto;
      
   }
+  .buton_lst{
+    text-align: center;
+    padding: 0px;
+  }
+  .slider_txt {
+    padding: 23% 6% 4% 6%;
+    font-size: 15px;
+    font-family: 'Poppins';
+    font-weight: 400;
+    text-align: left;
+    margin-bottom: 5px;
+}
+.slider_row {
+  padding-top: 40%;
+  padding-bottom: 2%;
+}
+.enquiry button{
+  margin-top: 0%;
+}
+  
   .details_section h4{
     text-align: left;
     margin: 60px 20px 20px 0px;
