--- a/src/Components/LoginBox.css
+++ b/src/Components/LoginBox.css
@@ -15,7 +15,30 @@
     flex-direction: 'column'
 }
 
+ 
 
+  .signuph3{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #191919;
+    padding-left: 120px;
+    /* margin-top: 100px; */
+    padding-top: 250px;
+  }
+  
+ .signuph3 .link {
+    color: #B22D31;
+    border: none;
+    background-color: transparent;
+  }
+  
+ .signuph3 .link a{
+    font-weight: bold;
+    text-align: center;
+  }
 
 .dialogStylesLogin .dialogCloseButtonStylesLogin {
     cursor: pointer;
