--- a/src/Extra-files/Products.css
+++ b/src/Extra-files/Products.css
@@ -60,7 +60,19 @@
         position: relative;
         width: 120px;
       }
-
+    
+    .fa {
+        display: inline-block;
+        font: normal normal normal 14px/1 FontAwesome;
+        font-size: inherit;
+        text-rendering: auto;
+        -webkit-font-smoothing: antialiased;
+    }
+    
+    
+    
+    
+    
       @media only screen and (max-width: 600px) {
 
         .abc {
