--- a/src/Components/LoginBox.css
+++ b/src/Components/LoginBox.css
@@ -1,6 +1,6 @@
 .dialogStylesLogin {
-    width: 500px;
-    height: 400px;
+  width: 500px;
+  height: 450px;
     position: fixed;
     border: none;
     border-radius: 33px;
@@ -15,7 +15,40 @@
     flex-direction: 'column'
 }
 
+.dialogbox {
+  width: 100%;
+  height: 800px;
+  background-color: #808080de;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: 999;
+}
  
+.loginh3{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #191919;
+  padding-left: 120px;
+  /* margin-top: 100px; */
+  padding-top: 250px;
+}
+
+.loginh3 .link {
+  color: #B22D31;
+  border: none;
+  background-color: transparent;
+}
+
+.loginh3 .link a{
+  font-weight: bold;
+  text-align: center;
+}
 
   .signuph3{
     font-family: 'Inter';
@@ -59,7 +92,7 @@
     margin: 0;
     top: 50%;
     left: 45%;
-    height: 300px;
+    height: 400px;
     width: 300px;
  border: none;
     border-radius: 20px;
@@ -83,4 +116,5 @@
         font-weight: bold;
     
     };
+
 }
