--- a/src/Components/SignUpBox.css
+++ b/src/Components/SignUpBox.css
@@ -15,7 +15,17 @@
     display: inline;
     flex-direction: column;
 }
-
+.dialogbox {
+    width: 100%;
+    height: 800px;
+    background-color: #808080de;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    z-index: 999;
+  }
 .dialogStylesSignUp .dialogCloseButtonStylesSignUp {
     cursor: pointer;
     border: none;
@@ -30,13 +40,13 @@
 @media only screen and (max-width: 600px) {
     .dialogStylesSignUp  {
         width: 300px;
-        height: 600px;
+        height: 500px;
         max-width: 100%;
         position: fixed;
         border: none;
         border-radius: 33px;
         left: 50%;
-        top: 65%;
+        top: 50%;
         transform: translate(-50%,-50%);
         z-index: 999;
         font-weight: bold;
