--- a/src/Components/SignupLogin.css
+++ b/src/Components/SignupLogin.css
@@ -15,7 +15,17 @@
     flex-direction: 'column'
 }
 
-
+.dialogbox {
+    width: 100%;
+    height: 800px;
+    background-color: #808080de;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    z-index: 999;
+  }
 
 .dialogStyles .dialogCloseButtonStyles {
     cursor: pointer;
@@ -23,7 +33,7 @@
     color : grey;
     width: 50px;
     height: 50px;
-    margin-left: 450px;
+    margin-left: 400px;
     margin-top: 10px !important;
     background-color: transparent;
     font-weight: bold;
@@ -33,19 +43,19 @@
 @media only screen and (max-width: 600px) {
     .dialogStyles {
      
-    margin: 0;
-    top: 45%;
-    left: 50%;
-    height: 300px;
-    width: 300px;
- border: none;
-    border-radius: 20px;
-    z-index: 999;
-    font-weight: bold;
-    background-color: white;
-    padding: 5px;
-    margin: 5px;
-    display: inline;
+        margin: 0;
+        top: 50%;
+        left: 45%;
+        height: 300px;
+        width: 300px;
+     border: none;
+        border-radius: 20px;
+        z-index: 999;
+        font-weight: bold;
+        background-color: white;
+        padding: 5px;
+        margin: 5px;
+        display: inline;
     }
 
     .dialogStyles .dialogCloseButtonStyles {
@@ -58,6 +68,6 @@
         z-index: 999;
         background-color: transparent;
         font-weight: bold;
-        padding-top: 500px;
+    
     };
 }
