--- a/src/Pages/FavouriteProducts.css
+++ b/src/Pages/FavouriteProducts.css
@@ -1,10 +1,10 @@
-.product_section {
+.fav_section {
   overflow: hidden;
   padding: 0px 65px;
 }
 
 
-.product_section h4 {
+.fav_section h4 {
   margin: 80px 20px 30px 20px;
   font-family: 'Poppins';
   font-weight: 600;
@@ -13,20 +13,9 @@
   text-align: center;
 }
 
-.details_section h4 {
-  text-align: left;
-  margin: 20px 20px 20px 0px;
-  font-family: 'Poppins';
-  font-weight: 600;
-  color: #191919;
-  font-size: 32px;
-  text-transform: uppercase;
-}
-.details_section p{
-  text-transform: uppercase;
-}
 
-.product_section figure {
+
+.fav_section figure {
   background: #FFFFFF;
   box-shadow: 0px 4px 19px rgb(0 0 0 / 7%);
   border-radius: 24px;
@@ -36,12 +25,12 @@
   text-align: center;
 }
 
-.product_section figure:hover{
+.fav_section figure:hover{
   border-radius: 24px;
   background: #f5d6d9cc;
 }
 
-.product_section figure img {
+.fav_section figure img {
   vertical-align: middle;
   border-style: none;
   padding: 11px 0px;
@@ -59,7 +48,7 @@ a:hover {
   text-decoration: none;
 }
 
-.product_section figure img {
+.fav_section figure img {
   height: 155px;
   z-index: 9;
   position: relative;
@@ -69,24 +58,24 @@ a:hover {
 
 
 @media only screen and (max-width: 600px) {
-  .product_section {
+  .fav_section {
       padding: 0px 23px;
   }
 
-  .product_section figure {
+  .fav_section figure {
       height: 180px;
       padding: 28px 0px 30px 0px;
       width: 150px !important;
   }
 
 
-  .product_section figure img {
+  .fav_section figure img {
       height: 108px;
       z-index: 9;
       position: relative;
       width: 100px !important;
   }
-  .product_section h4 {
+  .fav_section h4 {
     text-align: center;
     margin-top: 100px;
   }
