--- a/src/Pages/ViewProfile.css
+++ b/src/Pages/ViewProfile.css
@@ -1,15 +1,4 @@
 
-.profile {
-    position: absolute;
-    width: 381px;
-    height: 348px;
-    left: 500px;
-    top: 150px;
-    
-    background: #FFFFFF;
-    border-radius: 33px;
-  }
-  
   .profile  p {
     font-size: 15px;
      text-align: center;
@@ -23,10 +12,11 @@
     font-weight: 700;
     font-size: 20px;
     font-family: 'Poppins';
-    padding: 4% 0% 0% 4%;
+    padding: 10% 0% 0% 4%;
     text-align: center;
     margin-bottom: 40px;
     margin-right: 30px;
+    margin-top: 20px;
   }
   
   .profile input {
@@ -91,6 +81,8 @@
     }
     .profile h2{
      margin-left: 75px;
+     padding-top: 40%;
+     padding-left: 5%;
     }
   
     .profile input {
