--- a/src/Extra-files/FavProd.css
+++ b/src/Extra-files/FavProd.css
@@ -83,6 +83,9 @@ figure img {
             text-align: center;
         }
         
+        h5{
+          height: 150px;
+        }
     
   figure img {
             height: 108px;
