--- a/src/Extra-files/Cate.css
+++ b/src/Extra-files/Cate.css
@@ -37,6 +37,7 @@
         font-style: normal;
         color: #191919;
         text-align: center;
+        margin-bottom: 10px;
       }
 
       h3 {
@@ -88,7 +89,9 @@
             width: 150px;
         }
     
-    
+    h5 {
+      padding-bottom: 10px;
+    }
     
         
       }
