--- a/src/Pages/UpdateProfile.css
+++ b/src/Pages/UpdateProfile.css
@@ -1,121 +1,83 @@
 
-.update{
-    position: absolute;
-    width: 381px;
-    height: 348px;
-    left: 470px;
-    top: 100px;
-    
-    background: #FFFFFF;
-    border-radius: 33px;
-  }
-  
- .update  p {
-    font-size: 14px;
-        color: #B22D31;
-        margin-top: 10px;
-  }
-  
- .update  h2 {
-    font-weight: 700;
-    font-size: 20px;
-    font-family: 'Poppins';
-    padding: 0% 0% 0% 4%;
-    text-align: center;
-    margin-bottom: 15px;
-    margin-top: 0;
-    margin-left: 30px;
-  }
-  
- .update input {
-    border: 1px solid #f7f7f7;
-    background: #f7f7f7;
-    border-radius: 38px;
-    color: #191919;
-    font-size: 14px;
-    text-align: left;
-    width: 100%;
-    margin: 0px 0px 20px 0px;
-    padding: 3% 10%;
-  }
-  
- .update p {
-    font-size: 14px;
-        color: #B22D31;
-        margin-left: 40%;
-  }
-  
- .update button {
-  margin-left: 5%;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  cursor: pointer;
-  height: 30px;
-  width: 300px;
-  border: #B22D31;
-  background: #B22D31;
-  border-radius: 39px;
-  font-family: 'Inter';
-  font-style: normal;
+
+.up{
+  padding-top: 100px;
+  padding-left: 450px;
+}
+
+.up  h2 {
   font-weight: 700;
-  font-size: 16px;
-  line-height: 19px;
-  color: #FFFFFF;
+  font-size: 20px;
+  font-family: 'Poppins';
+  /* padding: 0% 0% 0% 4%; */
+  /* text-align: center; */
+  margin-bottom: 40px;
+  /* margin-right: 30px; */
+  margin-top: 20px;
+  margin-left: 150px;
+}
+
+.up .defaultButton {
+  margin-left: 100px;
+margin-bottom: 20px;
+margin-top: 20px;
+cursor: pointer;
+height: 30px;
+width: 200px;
+border: #B22D31;
+background: #B22D31;
+border-radius: 39px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 19px;
+color: #FFFFFF;;
   }
   
- .update  button:disabled {
+ .up .defaultButton:disabled {
     cursor: not-allowed;
   }
- .update  h3{
-    margin-left: 20%;
-  margin-bottom: 20px;
-    font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
+
+.up input {
+  border: 1px solid #f7f7f7;
+  background: #f7f7f7;
+  border-radius: 38px;
   color: #191919;
-  margin-bottom: 20px;
+  font-size: 14px;
+  text-align: left;
+  width: 400px;
+  height: 35px;
+  left: 300px;
+  display: block;
+  margin: 10px 5px 0px 5px;
+  /* padding: 3% 8% ; */
   }
-  .update h3 .link {
-    color: #B22D31;
-  }
+
+.up  p {
+  font-size: 14px;
+      color: #B22D31;
+      margin-top: 10px;
+}
+
+@media only screen and (max-width: 600px) {
   
-  .update h3 .link a{
-    font-weight: bold;
-  }
-  
-  
-  @media (max-width : 768px) {
-    .update{
-      position: absolute;
-      width: 300px;
-      height: 348px;
-      left: 15px;
-      top: 100px;
-      
-      background: #FFFFFF;
-      border-radius: 33px;
-    }
-    .update  h2{
-      margin-bottom: 20px;
-      text-align: center;
-    }
-  
-    .update  input {
-        height: 25px;
-        width: 250px;
-        margin-left: 40px;
-    }
-  
-    .update button {
-        height: 25px;
-        width: 150px;
-        margin-left: 100px;
-    }
-  
-    .update h3 {
-        margin-left: 20px;
-    }
-  }
-  
+.up{
+  padding-top: 100px;
+  padding-left: 0px;
+}
+
+.up input {
+  width: 320px;
+  margin-left: 20px;
+}
+
+.up h2 {
+  margin-left: 120px;
+}
+
+.up .defaultButton
+{
+  margin-left: 80px;
+}
+}
