--- a/src/Pages/UserNotification.css
+++ b/src/Pages/UserNotification.css
@@ -1,9 +1,10 @@
-.product_section {
+.note_section {
   overflow: hidden;
   padding: 0px 65px;
 }
 
-.product_section h4 {
+
+.note_section .noteh4 {
   text-align: center;
   margin: 100px 20px 30px 20px;
   font-family: 'Poppins';
@@ -11,20 +12,7 @@
   color: #191919;
 }
 
-.details_section h4 {
-  text-align: left;
-  margin: 0px 20px 20px 0px;
-  font-family: 'Poppins';
-  font-weight: 600;
-  color: #191919;
-  font-size: 32px;
-  text-transform: uppercase;
-}
-.details_section p{
-  text-transform: uppercase;
-}
-
-.product_section figure {
+.note_section figure {
   background: #FFFFFF;
   box-shadow: 0px 4px 19px rgb(0 0 0 / 7%);
   border-radius: 24px;
@@ -36,13 +24,13 @@
 .circle{
   display: block;
 }
-.product_section figure:hover{
+.note_section figure:hover{
   box-shadow: 0px 5px 22px rgb(17 17 18 / 7%);
   border-radius: 24px;
   background: #f5d6d9cc;
 }
 
-.product_section figure img {
+.note_section figure img {
   vertical-align: middle;
   border-style: none;
   padding: 11px 0px;
@@ -51,7 +39,7 @@
   object-fit: contain;
 }
 
-.product_section h5 {
+.note_section h5 {
   font-weight: 500;
   font-size: 18px;
   font-style: normal;
@@ -59,7 +47,7 @@
   text-align: center;
 }
 
-.product_section figure p {
+.note_section figure p {
   background: #f5d6d9cc;
   border: 1px solid #f5d6d9cc;
   border-radius: 50%;
@@ -101,7 +89,7 @@ a:hover {
   text-decoration: none;
 }
 
-.product_section figure img {
+.note_section figure img {
   height: 155px;
   z-index: 9;
   position: relative;
@@ -109,7 +97,7 @@ a:hover {
   height: 150px;
 }
 
-.content_section {
+/* .content_section {
   overflow: hidden;
   background: #b22d31;
   border: 1px solid #b22d31;
@@ -117,9 +105,9 @@ a:hover {
   margin: 50px 65px 0px 65px;
   padding: 40px;
   text-align: center;
-}
+} */
 
-.content_section h4 {
+.content_section .noteh4 {
   color: #fff;
   font-weight: 600;
   font-size: 26px;
@@ -127,7 +115,7 @@ a:hover {
   font-family: 'Poppins';
 }
 
-.content_section p {
+/* .content_section p {
   font-weight: 400;
   font-size: 16px;
   color: #fff;
@@ -136,7 +124,7 @@ a:hover {
   width: 50%;
   margin: 0 auto;
   font-style: normal;
-}
+} */
 
 .content_section button {
   background: #ffb800;
@@ -152,33 +140,39 @@ a:hover {
 
 @media only screen and (max-width: 600px) {
 
-  .product_section {
+  .note_section {
       padding: 0px 23px;
   }
 
-  .product_section figure {
+  .join {
+    margin: 50px 25px 0px 25px;
+    padding: 27px 0px;
+  }
+  
+
+  .note_section figure {
       height: 158px;
       padding: 28px 0px 0px 0px;
   }
 
-  .product_section h4 {
+  .note_section .noteh4 {
       text-align: left;
       margin: 100px 0px 30px 0px;
   }
 
-  .goldpage .gold h4 {
+  .goldpage .gold .noteh4 {
       text-align: left;
       margin: 50px 0px 0px 0px;
   }
 
-  .product_section figure img {
+  .note_section figure img {
       height: 108px;
       z-index: 9;
       position: relative;
       width: 100%;
   }
 
-  .product_section figure p {
+  .note_section figure p {
       background: #f5d6d9cc;
       border: 1px solid #f5d6d9cc;
       border-radius: 50%;
