--- a/src/Components/SignUpBox.css
+++ b/src/Components/SignUpBox.css
@@ -21,6 +21,7 @@
     background-color: #808080de;
     position: absolute;
     left: 0;
+    /* overflow-y: hidden; */
     right: 0;
     bottom: 0;
     top: 0;
@@ -67,4 +68,5 @@
         background-color: transparent;
         font-weight: bold;
     }
+
 }
