--- a/src/Extra-files/Cate.css
+++ b/src/Extra-files/Cate.css
@@ -21,7 +21,7 @@
 
         box-shadow: 0px 5px 22px rgb(17 17 18 / 7%);
         border-radius: 24px;
-        background: #f5d6d9cc;
+        background: white;
       }
   .figureCate img {
         vertical-align: middle;
@@ -90,7 +90,7 @@
         }
     
     h5 {
-      padding-bottom: 10px;
+      padding-bottom: 5px;
     }
     
         
