--- a/src/Extra-files/Products.css
+++ b/src/Extra-files/Products.css
@@ -14,12 +14,6 @@
       width: 120px !important;
       text-align: center;
     }
- .figureProd:hover{
-
-        box-shadow: 0px 5px 22px rgb(17 17 18 / 7%);
-        border-radius: 24px;
-        background: #f5d6d9cc;
-      }
       
 .figureProd img {
         vertical-align: middle;
@@ -128,7 +122,7 @@
   .figureProd {
             height: 158px;
             background: #FFFFFF;
-            box-shadow: 0px 4px 10px rgb(0 0 0 / 7%);
+            /* box-shadow: 0px 4px 10px rgb(0 0 0 / 7%); */
             margin:0;
             padding: 0;
             border-radius: 24px;
@@ -136,7 +130,7 @@
         }
 
         h5{
-          height: 150px !important;
+          height: 47px !important;
         }
         
     
