--- a/src/Pages/PrivacyPolicy.css
+++ b/src/Pages/PrivacyPolicy.css
@@ -4,7 +4,7 @@
 
 }
 
-.privacypolicy h2{
+.privacypolicy .privacyh2{
     color: #a52a2a;
     margin-top: 100px;
     margin-left: 50px;
@@ -13,7 +13,7 @@
     text-align: center;
    
 }
-.privacypolicy h3 {
+.privacypolicy .privacyh3 {
     text-align: center;
     margin-left: 50px;
     margin-top: 30px;
@@ -28,12 +28,12 @@
 
 @media all and (max-width: 600px){
 
-    .privacypolicy h2{
+    .privacypolicy .privacyh2{
         margin-left: 0px;
         font-size: 28px;
     }
 
-    .privacypolicy h3{
+    .privacypolicy .privacyh3{
         text-align: justify;
     margin-left: 0px;
     margin-top: 30px;
