--- a/src/Pages/SingleProduct.css
+++ b/src/Pages/SingleProduct.css
@@ -92,15 +92,9 @@
   margin: 0 auto;
 }
 
-/* .swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 60%;
-  object-fit: contain;
-} */
 
 .swiper-wrapper .swiper_img{
-background-image: url(../Pages/images/blackbanner.png);
+background-image: url('https://pngtree.com/free-white-background');
 background-repeat: no-repeat;
 background-size: 100% 100%;
 border: 1px solid transparent;
@@ -158,7 +152,7 @@ border-radius: 50px;
 
 }
 .product #carousel-thumbs {
-  /* background: rgba(255,255,255,.3); */
+ 
   margin: 50px 0px 0px 0px;
   bottom: 0;
   left: 0;
@@ -256,16 +250,7 @@ h4{
     }
 
   }
-  @media all and (min-width: 576px) {
-    /* .product .carousel-container #carousel-thumbs {
-      position: absolute;
-    } */
-  }
-  @media all and (max-width: 576px) {
-    /* .product .carousel-container #carousel-thumbs {
-      background: #ccccce;
-    } */
-  }
+  
 
   @media only screen and (max-width: 600px) {
     .position_banner{
@@ -347,7 +332,7 @@ h4{
       border: 1px solid #dee3e7bf !important;
       border-radius: 20px;
       width: fit-content;
-      /* width: 100% !important; */
+     
   }
 
  .newclass .product-thumbs .swiper-slide img {
@@ -374,9 +359,7 @@ h4{
       text-align: center;
       padding: 40px 20px;
   }
-  .product .carousel-item img{
-      /* width: 45%; */
-  }
+  
   .product .carousel-control-next{
       margin-right: -21px !important;
   }
