--- a/src/Pages/Terms&Conditions.css
+++ b/src/Pages/Terms&Conditions.css
@@ -4,7 +4,7 @@
 
 }
 
-.tandc h2{
+.tandc .tandch2{
     color: #a52a2a;
     margin-top: 100px;
     margin-left: 50px;
@@ -13,7 +13,7 @@
     text-align: center;
    
 }
-.tandc h3 {
+.tandc .tandch3 {
     text-align: center;
     margin-left: 50px;
     margin-top: 30px;
@@ -28,12 +28,12 @@
 
 @media all and (max-width: 600px){
 
-    .tandc h2{
+    .tandc .tandch2{
         margin-left: 0px;
         padding: 20px;
         font-size: 28px;
     }
-    .tandc h3{
+    .tandc .tandch3{
         text-align: justify;
     margin-left: 0px;
     margin-top: 30px;
