--- a/src/Extra-files/Cate_List.css
+++ b/src/Extra-files/Cate_List.css
@@ -1,7 +1,7 @@
-.category-list {
+/* .category-list {
       
       margin-left: 0px;
   margin-right: 0px;
   padding: 0px;
     margin: 0px
-  }
+  } */
