--- a/src/Extra-files/Cate.css
+++ b/src/Extra-files/Cate.css
@@ -1,4 +1,10 @@
-
+/* .category-list {
+      
+  margin-left: 0px;
+margin-right: 0px;
+padding: 0px;
+margin: 0px
+}
 
  .figureCate {
 
@@ -21,7 +27,7 @@
 
         box-shadow: 0px 5px 22px rgb(17 17 18 / 7%);
         border-radius: 24px;
-        background: white;
+        background: white !important;
       }
   .figureCate img {
         vertical-align: middle;
@@ -95,4 +101,4 @@
     
         
       }
-      
+       */
