--- a/src/Extra-files/FavProd.css
+++ b/src/Extra-files/FavProd.css
@@ -18,7 +18,7 @@ figure:hover{
 
         box-shadow: 0px 5px 22px rgb(17 17 18 / 7%);
         border-radius: 24px;
-        background: #f5d6d9cc;
+        background: white;
       }
       
 figure img {
