--- a/src/Extra-files/Products.css
+++ b/src/Extra-files/Products.css
@@ -67,7 +67,7 @@
     }
     .figureProd .like .likebutton {
         padding-top: 5px;
-        background-color: rgba(245, 214, 217, 0.8);
+        background-color: black;
         border: 1px solid white !important;
         border-radius: 50%;
         vertical-align: middle;
@@ -105,7 +105,7 @@
     }
     .figureProd .like .likebutton {
         padding-top: 5px;
-        background-color: rgba(245, 214, 217, 0.8);
+        background-color: black;
         border: 1px solid white !important;
         border-radius: 50%;
         vertical-align: middle;
