--- a/src/Pages/CategoryList.css
+++ b/src/Pages/CategoryList.css
@@ -1,4 +1,4 @@
-.category_section {
+/* .category_section {
   overflow: hidden;
   padding: 0px 65px;
 }
@@ -41,7 +41,7 @@
 .category_section figure:hover{
   box-shadow: 0px 5px 22px rgb(17 17 18 / 7%);
   border-radius: 24px;
-  background: #f5d6d9cc;
+  background: white;
 }
 
 .category_section figure img {
@@ -58,7 +58,7 @@
   font-style: normal;
   color: #191919;
   text-align: center;
-}
+} */
 
 /* .category_section figure p {
   background: #f5d6d9cc;
@@ -75,7 +75,7 @@
   top: 34px;
 } */
 
-.gold figure p {
+/* .gold figure p {
   background-color: #f3d9221a !important;
   border: 1px solid white;
   border-radius: 50%;
@@ -139,7 +139,7 @@ a:hover {
       z-index: 9;
       position: relative;
       width: 100%;
-  }
+  } */
 
   /* .category_section figure p {
       background: #f5d6d9cc;
@@ -155,5 +155,5 @@ a:hover {
   } */
 
   
-}
+/* } */
 
