--- a/src/Pages/FavouriteProducts.css
+++ b/src/Pages/FavouriteProducts.css
@@ -27,7 +27,7 @@
 
 .fav_section figure:hover{
   border-radius: 24px;
-  background: #f5d6d9cc;
+  background: white;
 }
 
 .fav_section figure img {
