--- a/src/Pages/Products.css
+++ b/src/Pages/Products.css
@@ -24,10 +24,10 @@
   text-align: center;
 }
 
-.product_section figure:hover{
+/* .product_section figure:hover{
   border-radius: 24px;
   background: #f5d6d9cc;
-}
+} */
 
 .product_section figure img {
   vertical-align: middle;
