--- a/src/Pages/SingleProduct.css
+++ b/src/Pages/SingleProduct.css
@@ -33,8 +33,8 @@
     border-radius: 20px;
 }
 .swiper_img img{
-  width: 200px;
-  height: 213px;
+  width: 450px;
+  height: 400px;
 }
 .option_img img{
   width: 100%;
@@ -47,7 +47,7 @@
 
 .swiper {
   width: 100%;
-  height: 300px;
+  height: 200px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -56,7 +56,7 @@
   padding-bottom: 0%;
 }
 .swiper-button-next:after, .swiper-button-prev:after{
-  font-size: 24px !important;
+  font-size: 34px !important;
 }
 
 .swiper-slide {
@@ -79,7 +79,7 @@
 
 .mySwiper .swiper-slide {
   width: 25%;
-  height: 100%;
+  height: 75%;
  
 }
 
@@ -96,9 +96,9 @@
 .swiper-wrapper .swiper_img{
 background-image: url('https://pngtree.com/free-white-background');
 background-repeat: no-repeat;
-background-size: 100% 100%;
+background-size: 0% 0%;
 border: 1px solid transparent;
-border-radius: 50px;
+/* border-radius: 50px; */
 }
 
 
@@ -270,6 +270,11 @@ h4{
       margin: 0 auto;
      
   }
+
+  .swiper_img img{
+  width: 260px;
+  height: 300px;
+}
   .buton_lst{
     text-align: center;
     padding: 0px;
