--- a/src/Pages/UserNotification.css
+++ b/src/Pages/UserNotification.css
@@ -27,7 +27,8 @@
 .note_section figure:hover{
   box-shadow: 0px 5px 22px rgb(17 17 18 / 7%);
   border-radius: 24px;
-  background: #f5d6d9cc;
+  /* background: #f5d6d9cc; */
+  background: white;
 }
 
 .note_section figure img {
@@ -48,8 +49,8 @@
 }
 
 .note_section figure p {
-  background: #f5d6d9cc;
-  border: 1px solid #f5d6d9cc;
+  background: white;
+  border: 1px solid white;
   border-radius: 50%;
   margin: 0px 20px;
   position: absolute;
@@ -154,8 +155,8 @@ a:hover {
   }
 
   .note_section figure p {
-      background: #f5d6d9cc;
-      border: 1px solid #f5d6d9cc;
+      background: white;
+      border: 1px solid white;
       border-radius: 50%;
       margin: 0 auto;
       position: absolute;
